[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Root1.png" type="Texture" id=2]
[ext_resource path="res://Player/RootHead.png" type="Texture" id=3]
[ext_resource path="res://Player/RootHead.gd" type="Script" id=4]
[ext_resource path="res://Player/Root_Head_Dead.png" type="Texture" id=5]
[ext_resource path="res://Player/Root_Dead.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 10 )

[node name="Player" type="Node2D"]
z_index = 5
z_as_relative = false
script = ExtResource( 1 )
pointInterval = 0.05
ROTATION_SPEED = 2.0

[node name="AliveRoot" type="Line2D" parent="."]
points = PoolVector2Array( -108, -47 )
width = 20.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 2 )
texture_mode = 1

[node name="RootHead" type="Sprite" parent="."]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="RootAnkuppelPunkt" type="Position2D" parent="RootHead"]
position = Vector2( -400, 0 )
scale = Vector2( 20, 20 )

[node name="DeadRoot" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
width = 20.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 6 )
texture_mode = 1

[node name="DeadHead" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.055, 0.05 )
texture = ExtResource( 5 )

[node name="DetectionAreaGen" type="Area2D" parent="." groups=["Player"]]
position = Vector2( 1, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="DetectionArea" type="Area2D" parent="." groups=["Player"]]
position = Vector2( 1, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="RootCollision" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( -1, 0 )
shape = SubResource( 1 )

[node name="WinRect" type="ColorRect" parent="."]
visible = false
margin_right = 853.0
margin_bottom = 482.0

[node name="Label" type="Label" parent="WinRect"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -426.5
margin_right = 426.5
margin_bottom = 482.0
rect_scale = Vector2( 10, 10 )
text = "YOU WIN!"

[connection signal="area_entered" from="DetectionAreaGen" to="." method="_on_DetectionArea_area_entered"]
[connection signal="area_entered" from="DetectionArea" to="." method="_on_DetectionArea_area_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
